Updated dependencies to Angular 18
 -includes update to TypeScript 5.4
- includes update to new Angular build system
- includes update to @angular-eslint/schematics@rc-v18 (final not ready yet)

--- a/package.json
+++ b/package.json
@@ -26,14 +26,14 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@angular/animations": "17.3.6",
-    "@angular/common": "17.3.6",
-    "@angular/compiler": "17.3.6",
-    "@angular/core": "17.3.6",
-    "@angular/forms": "17.3.6",
-    "@angular/platform-browser": "17.3.6",
-    "@angular/platform-browser-dynamic": "17.3.6",
-    "@angular/router": "17.3.6",
+    "@angular/animations": "18.0.0",
+    "@angular/common": "18.0.0",
+    "@angular/compiler": "18.0.0",
+    "@angular/core": "18.0.0",
+    "@angular/forms": "18.0.0",
+    "@angular/platform-browser": "18.0.0",
+    "@angular/platform-browser-dynamic": "18.0.0",
+    "@angular/router": "18.0.0",
     "@fortawesome/angular-fontawesome": "0.14.0",
     "@fortawesome/fontawesome-svg-core": "6.5.1",
     "@fortawesome/free-solid-svg-icons": "6.5.1",
@@ -47,15 +47,15 @@
     "zone.js": "0.14.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "17.3.6",
-    "@angular-eslint/builder": "17.3.0",
-    "@angular-eslint/eslint-plugin": "17.3.0",
-    "@angular-eslint/eslint-plugin-template": "17.3.0",
-    "@angular-eslint/schematics": "17.3.0",
-    "@angular-eslint/template-parser": "17.3.0",
-    "@angular/cli": "17.3.6",
-    "@angular/compiler-cli": "17.3.6",
-    "@angular/language-service": "17.3.6",
+    "@angular-devkit/build-angular": "18.0.1",
+    "@angular-eslint/builder": "18.0.0-alpha.5",
+    "@angular-eslint/eslint-plugin": "18.0.0-alpha.5",
+    "@angular-eslint/eslint-plugin-template": "18.0.0-alpha.5",
+    "@angular-eslint/schematics": "18.0.0-alpha.5",
+    "@angular-eslint/template-parser": "18.0.0-alpha.5",
+    "@angular/cli": "18.0.1",
+    "@angular/compiler-cli": "18.0.0",
+    "@angular/language-service": "18.0.0",
     "@ngrx/schematics": "17.2.0",
     "@playwright/test": "1.43.1",
     "@types/jasmine": "5.1.4",
@@ -88,7 +88,7 @@
     "stylelint-config-standard-scss": "11.1.0",
     "stylelint-no-unsupported-browser-features": "7.0.0",
     "ts-node": "10.9.2",
-    "typescript": "5.2.2",
+    "typescript": "5.4.5",
     "wdio-chromedriver-service": "8.1.1"
   }
 }
