--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "rxjs": "7.8.1",
     "stylelint-config-scss": "1.0.0-security",
     "tslib": "2.6.2",
-    "zone.js": "0.14.4"
+    "zone.js": "0.14.4",
+    "@ngrx/signals": "^17.2.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "17.3.6",
@@ -57,6 +58,7 @@
     "@angular/compiler-cli": "17.3.6",
     "@angular/language-service": "17.3.6",
     "@ngrx/schematics": "17.2.0",
+    "@ngrx/signals": "17.2.0",
     "@playwright/test": "1.43.1",
     "@types/jasmine": "5.1.4",
     "@types/node": "20.10.5",
