--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,7 @@
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
-    "strictTemplates": true
+    "strictTemplates": true,
+    "_enabledBlockTypes": ["if", "switch", "for", "defer"]
   }
 }
