--- a/package.json
+++ b/package.json
@@ -26,20 +26,21 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@angular/animations": "18.0.0",
-    "@angular/common": "18.0.0",
-    "@angular/compiler": "18.0.0",
-    "@angular/core": "18.0.0",
-    "@angular/forms": "18.0.0",
-    "@angular/platform-browser": "18.0.0",
-    "@angular/platform-browser-dynamic": "18.0.0",
-    "@angular/router": "18.0.0",
+    "@angular/animations": "18.1.3",
+    "@angular/common": "18.1.3",
+    "@angular/compiler": "18.1.3",
+    "@angular/core": "18.1.3",
+    "@angular/forms": "18.1.3",
+    "@angular/platform-browser": "18.1.3",
+    "@angular/platform-browser-dynamic": "18.1.3",
+    "@angular/router": "18.1.3",
     "@fortawesome/angular-fontawesome": "0.15.0",
-    "@fortawesome/fontawesome-svg-core": "6.5.2",
-    "@fortawesome/free-solid-svg-icons": "6.5.2",
-    "@ngrx/effects": "17.2.0",
-    "@ngrx/store": "17.2.0",
-    "@ngrx/store-devtools": "17.2.0",
+    "@fortawesome/fontawesome-svg-core": "6.6.0",
+    "@fortawesome/free-solid-svg-icons": "6.6.0",
+    "@ngrx/effects": "18.0.2",
+    "@ngrx/operators": "18.0.2",
+    "@ngrx/store": "18.0.2",
+    "@ngrx/store-devtools": "18.0.2",
     "bootstrap": "5.3.2",
     "rxjs": "7.8.1",
     "stylelint-config-scss": "1.0.0-security",
@@ -47,16 +48,16 @@
     "zone.js": "0.14.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "18.0.1",
-    "@angular-eslint/builder": "18.0.0-alpha.5",
-    "@angular-eslint/eslint-plugin": "18.0.0-alpha.5",
-    "@angular-eslint/eslint-plugin-template": "18.0.0-alpha.5",
-    "@angular-eslint/schematics": "18.0.0-alpha.5",
-    "@angular-eslint/template-parser": "18.0.0-alpha.5",
-    "@angular/cli": "18.0.1",
-    "@angular/compiler-cli": "18.0.0",
-    "@angular/language-service": "18.0.0",
-    "@ngrx/schematics": "17.2.0",
+    "@angular-devkit/build-angular": "18.1.3",
+    "@angular-eslint/builder": "18.2.0",
+    "@angular-eslint/eslint-plugin": "18.2.0",
+    "@angular-eslint/eslint-plugin-template": "18.2.0",
+    "@angular-eslint/schematics": "18.2.0",
+    "@angular-eslint/template-parser": "18.2.0",
+    "@angular/cli": "18.1.3",
+    "@angular/compiler-cli": "18.1.3",
+    "@angular/language-service": "18.1.3",
+    "@ngrx/schematics": "18.0.2",
     "@playwright/test": "1.43.1",
     "@types/jasmine": "5.1.4",
     "@types/node": "20.10.5",
@@ -88,7 +89,7 @@
     "stylelint-config-standard-scss": "11.1.0",
     "stylelint-no-unsupported-browser-features": "7.0.0",
     "ts-node": "10.9.2",
-    "typescript": "5.4.5",
+    "typescript": "5.5.4",
     "wdio-chromedriver-service": "8.1.1"
   }
 }
