* fix wrong type definitions in wdio tsconfig

--- a/e2e-wdio/tsconfig.json
+++ b/e2e-wdio/tsconfig.json
@@ -4,6 +4,6 @@
     "outDir": "../out-tsc/e2e",
     "module": "commonjs",
     "target": "es2020",
-    "types": ["node", "@wdio/globals/types", "@wdio/jasmine-framework"]
+    "types": ["node", "@wdio/globals/types", "@wdio/jasmine-framework", "jasmine"]
   }
 }
