* fix download artifact path

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -73,6 +73,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: angular-styleguide
+          path: ./dist/angular-redux-shop
 
       # Deploy recent build and push it to branch 'gh-pages'
       # this will trigger the action 'pages build & deployment' to host the recent build
